--- a/src/components/aid/aid.scss
+++ b/src/components/aid/aid.scss
@@ -2,14 +2,14 @@
 
 .aid-wrapper {
     @include backgroundIce;
-    margin: 20px 0px;
+    margin: 70px 0px 100px 0px;
     padding: 10px 30px 30px 30px;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
-    box-shadow: 7px 15px 20px -6px black,
-        0px 0px 5px rgba(145, 144, 144, 0.493);
-    transform: translateY(200px);
+    box-shadow: 0 25px 35px rgba(0, 0, 0, 0.5);
+    border-right: 1px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 
     &__title {
         position: absolute;
@@ -81,17 +81,10 @@
         margin: 20px 0px;
 
         &:nth-child(2) {
-            font-size: $text-size-h2;
-            margin: 30px 0px;
-            font-weight: 500;
-
-        }
-
-        &:nth-child(3) {
             margin: 50px 0px;
         }
 
-        &:nth-child(4) {
+        &:nth-child(3) {
             margin: 50px 0px;
         }
 
@@ -138,12 +131,19 @@
 
     &__step-descriptions-item {
         @include flexCenter;
+        flex-wrap: wrap;
         height: 130px;
         list-style-type: none;
         text-align: center;
         opacity: 0.5;
-        &--active{
+
+        &--active {
             opacity: 1;
+            animation: showActiveStep 0.5s 0s 1 cubic-bezier(0, 1.74, 0.4, 0.74);
+        }
+
+        & a {
+            color: rgb(23, 23, 247);
         }
     }
 
@@ -171,6 +171,7 @@
         margin-bottom: 15px;
         padding: 10px;
         border-radius: 50%;
+        cursor: pointer;
         position: relative;
 
         &::before {
@@ -179,6 +180,7 @@
             left: 0%;
             top: 50%;
             transform: translate(-80%, -50%);
+            transition: background-color 0.8s;
             width: 20vw;
             max-width: 140px;
             height: 1px;
@@ -211,14 +213,39 @@
                 border-radius: inherit;
                 border: 3px solid $color-purple;
                 z-index: -5;
+                animation: showActiveIcon 0.5s 0s 1 cubic-bezier(0, 1.74, 0.4, 0.74);
             }
+        }
 
+        &--pastActive {
+
+            &::after {
+                content: "";
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+                width: 115%;
+                height: 115%;
+                background-color: transparent;
+                backdrop-filter: blur(55px);
+                border-radius: inherit;
+                border: 3px solid $color-purple;
+                z-index: -5;
+                animation: hideActiveIcon 1s 0s 1 linear;
+            }
         }
     }
 
     &__button {
         @include flexCenter;
         transform: scale(0.7);
+        width: auto;
+
+        & button {
+            outline: transparent;
+            cursor: pointer;
+        }
     }
 
 }
@@ -229,6 +256,72 @@
 
     &__wrapper {}
 
+}
+
+.aid-instruction-step {
+    position: absolute;
+    background-color: $color-purple;
+    opacity: 0;
+
+    &--0 {
+        left: 0;
+        top: 0;
+        height: 6.5%;
+        width: 100%;
+        transform: translateY(-5%);
+
+        &:nth-child(2) {
+            left: 0;
+            top: 38%;
+            height: 20%;
+            width: 100%;
+            transform: translateY(0%);
+        }
+
+        &:nth-child(3) {
+            left: 50%;
+            top: 20%;
+            height: 7%;
+            width: 22%;
+            transform: translateY(0%) translateX(-47%);
+        }
+    }
+
+    &--1 {
+        left: 0;
+        top: 58%;
+        height: 14%;
+        width: 100%;
+    }
+
+    &--2 {
+        left: 0;
+        top: 72%;
+        height: 12%;
+        width: 100%;
+    }
+
+    &--3 {
+        left: 0;
+        top: 87.5%;
+        height: 12%;
+        width: 100%;
+    }
+
+    &--active {
+        opacity: 0.5;
+        animation: showActiveStep 0.5s 0s 1 cubic-bezier(0.39, 1.41, 0.49, 0.93);
+        //cubic-bezier(0, 1.74, 0.4, 0.74);
+
+        &:nth-of-type(2) {
+            animation: showActiveStepCenter 0.5s 0s 1 cubic-bezier(0.39, 1.41, 0.49, 0.93);
+        }
+    }
+
+
+    &__wrapper {
+        position: relative;
+    }
 }
 
 
@@ -243,6 +336,10 @@
         &__text {}
 
         &__step-descriptions {}
+
+        &__step-descriptions-item {
+            min-width: 340px;
+        }
 
         &__steps-view {}
 
@@ -266,8 +363,8 @@
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
     .aid-wrapper {
-        transform: translateY(150px);
         grid-template-columns: 60% 40%;
+        margin: 70px 0px 10vw 0px;
         max-height: 1250px;
 
         &__title {
@@ -284,15 +381,34 @@
         }
 
         &__attribution {
-            bottom: 9%;
+            bottom: 17%;
         }
     }
 
     .aid-description {
         &__wrapper {
             grid-row: 1/2;
-            //transform: translateX(0);
         }
+
+        &__title {
+            font-size: 3rem;
+            white-space: nowrap;
+        }
+
+        &__text {
+
+            &:nth-child(2) {
+                transform: translateX(40px);
+                max-width: 550px;
+            }
+
+            &:nth-child(3) {
+                transform: translateX(80px);
+                max-width: 550px;
+                margin-bottom: 100px;
+            }
+        }
+
     }
 
     .aid-instruction {
@@ -320,6 +436,12 @@
             @include flexCenter;
             max-width: 340px;
             height: calc(100% / 5);
+
+            &--active {
+                transform: scale(1.15);
+                animation: none;
+
+            }
         }
 
         &__text {
@@ -336,11 +458,10 @@
                 width: 130%;
                 max-width: none;
                 height: 110%;
-                background-color: $color-purple;
+                background-color: rgb(109, 37, 168);
                 border-radius: 5px;
                 box-shadow: 6px 15px 30px -6px black;
                 z-index: -10;
-                opacity: 0.8;
             }
         }
 
@@ -378,6 +499,7 @@
             margin-bottom: 0px;
             box-shadow: 6px 11px 20px -4px black,
                 -3px 0px 15px -6px black;
+            cursor: pointer;
 
             &::before {
                 content: "";
@@ -394,14 +516,15 @@
             bottom: 0px;
             left: 50%;
             transform: translateX(-40%) scale(0.8);
+
         }
     }
 
     .aid-instruction-image {
         //max-width: none;
-        margin: 30px 0px 70px 0px;
 
         &__wrapper {
+            padding: 30px 0px 70px 0px;
         }
 
     }
@@ -413,14 +536,16 @@
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-    .aid-wrapper {}
+    .aid-wrapper {
+        padding: 10px 50px 150px 50px;
+    }
 
     .aid-illustartion {
 
         &__attribution {
             font-size: 0.6rem;
             left: 51%;
-            bottom: 8%;
+            bottom: 16%;
         }
     }
 
@@ -450,17 +575,13 @@
     }
 
     .aid-instruction-image {
-        margin: 30px 0px 50px 0px;
 
         &__wrapper {
+            padding: 30px 0px 50px 0px;
             @include flexCenter;
             width: 90%;
         }
 
-    }
-
-    .aid-wrapper {
-        padding: 10px 40px 60px 40px;
     }
 
 }
@@ -468,9 +589,52 @@
 @media (min-width: 1600px) {
     .aid-instruction-image {
         //max-width: none;
-        margin: 30px 0px 70px 0px;
 
-        &__wrapper {}
+        &__wrapper {
+            padding: 30px 0px 70px 0px;
+        }
 
+    }
+}
+
+
+
+@keyframes showActiveIcon {
+    from {
+        transform: translate(-50%, -50%) scale(0);
+    }
+
+    to {
+        transform: translate(-50%, -50%) scale(1);
+    }
+}
+
+@keyframes hideActiveIcon {
+    from {
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    to {
+        transform: translate(-50%, -50%) scale(0);
+    }
+}
+
+@keyframes showActiveStep {
+    from {
+        transform: scale(0);
+    }
+
+    to {
+        transform: scale(1);
+    }
+}
+
+@keyframes showActiveStepCenter {
+    from {
+        transform: translateY(0%) translateX(-47%) scale(0);
+    }
+
+    to {
+        transform: translateY(0%) translateX(-47%) scale(1);
     }
 }
