--- a/src/components/project/project.scss
+++ b/src/components/project/project.scss
@@ -3,11 +3,14 @@
 .projects-wrapper {
     @include backgroundIce;
     height: auto;
-    margin: 20px 0px;
+    margin: 160px 0px 20px 0px;
     padding-bottom: 30px;
-    box-shadow: 7px 15px 20px -6px black,
-        0px 0px 5px rgba(145, 144, 144, 0.493);
-    transform: translateY(5%);
+    //box-shadow: 7px 15px 20px -6px black,
+    //    0px 0px 5px rgba(145, 144, 144, 0.493);
+    box-shadow: 0 25px 35px rgba(0, 0, 0, 0.5);
+    border-right: 1px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+
 
     &__title {
         position: absolute;
@@ -48,16 +51,21 @@
 }
 
 .project {
-    width: calc(100% - 20px);
+    width: calc(100% - 30px);
     height: auto;
     display: grid;
     grid-template-columns: 60% 40%;
     grid-template-rows: auto;
     background-color: $color-white;
-    margin: 20px 10px;
+    margin: 20px 15px;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 6px 15px 30px -6px black;
+
+    &--active {
+
+        &::before {}
+    }
 
     &__imgage-wrapper {
         @include flexCenter;
@@ -116,7 +124,7 @@
         grid-column: 1/2;
         grid-row: 2/3;
         height: 30px;
-        margin: 7px 0px;
+        margin: 15px 0px;
         display: flex;
         align-items: center;
         justify-content: flex-start;
@@ -126,7 +134,7 @@
     &__description {
         grid-column: 1/3;
         grid-row: 2/3;
-        margin: 35px 0px;
+        margin: 45px 0px;
     }
 
     &__button__wrpapper {
@@ -138,11 +146,16 @@
 
     &__button {
         transform: scale(0.7);
+        cursor: pointer;
     }
 }
 
 // small devices (smartphons on landscape oreintation, 768px and up)
-@media (max-width: 768px) and (orientation: landscape) {}
+@media (max-width: 768px) and (orientation: landscape) {
+    .projects-wrapper {
+        transform: translateY(2%);
+    }
+}
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
@@ -158,11 +171,11 @@
         }
 
         &__date {
-            margin: 22px 0px;
+            margin: 30px 0px;
         }
 
         &__description {
-            margin: 55px 0px;
+            margin: 65px 0px;
         }
 
         &__button__wrpapper {
@@ -236,6 +249,7 @@
     .projects-wrapper {
 
         &__illustartion {
+            max-width: 450px;
             transform: translateY(80px);
         }
     }
