--- a/src/components/association/association.scss
+++ b/src/components/association/association.scss
@@ -4,6 +4,7 @@
     display: inline-block;
     width: 100%;
     height: auto;
+    margin: 60px 0px 0px 0px;
 
     &__wrapper {
         width: 100%;
@@ -95,6 +96,7 @@
         &__description {
             grid-row: 2/3;
             line-height: 1.1rem;
+            max-width: 85%;
         }
 
         &__ilustration-wrapper {
@@ -123,6 +125,7 @@
 
         &__description {
             grid-column: 1/3;
+            max-width: none;
         }
 
         &__button {
