--- a/src/setting/varAndMixin.scss
+++ b/src/setting/varAndMixin.scss
@@ -21,7 +21,7 @@ $text-size-attribution: 0.3rem;
 
 @mixin backgroundIce {
     background: transparent;
-    backdrop-filter: blur(25px);
+    backdrop-filter: blur(10px);
 
     &::before {
         content: '';
@@ -30,7 +30,7 @@ $text-size-attribution: 0.3rem;
         top: 0;
         width: 100%;
         height: 100%;
-        background-color: $color-grey;
+        background-color: rgba(255, 255, 255, 0.2);
         opacity: 0.1;
         z-index: -10;
     }
